# 2023-cpl

./: CMakeLists.txt  LICENSE  README.md  turn.c  uoj.c
0-intro/: CMakeLists.txt  guess.c
1-types-io/: CMakeLists.txt  admin-scanf.c  administration.c  circle.c  mol.c  sphere.c
10-double-pointers/: CMakeLists.txt  echo.c  scores.c  selection-sort-strings.c
11-function-pointers/: CMakeLists.txt  bsearch-gnuc.c  integrate.c  sort.c
12-struct/: musician.c  padding.c  sds.c  struct.c
13-linked-lists/: CMakeLists.txt  jo.c  linkedlist.c
13-linked-lists/ll/: ll.c  ll.h
2-if/: CMakeLists.txt  min.c  mini.c
2021-exam/: sorted.c
3-for a while/: CMakeLists.txt  binary-search.c  digits-while.c  prime.c  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  game-of-life.c  merge.c
5-function/: CMakeLists.txt  binary2.c  prime2.c  stars2.c
6-/: CMakeLists.txt  min-re.c  min.c
7-data-type/: CMakeLists.txt  mergesort.c
9-pointers-c-strings/: str-literals.c  strcmp.c  strcpy.c  strlen.c
exam-1/: CMakeLists.txt  T1.c  T2.c  T3.c
oj-work-1/: ASCII.c  CMakeLists.txt  change.c  equation.c  gravity.c  julian.c  pi.c  time.c
oj-work-10/: CMakeLists.txt  bsearch.c  fifa.c  p2.c  polynlist.c  split-sort-2.c  split-sort.c
oj-work-11/: CMakeLists.txt  a_pour.c  stack_pour.c
oj-work-2/: CMakeLists.txt  collatz.c  factorial.c  fz.c  series.c  single.c  su.c
oj-work-3/: CMakeLists.txt  b-final.c  b-ternary-1.c  b-ternary-2.c  bubble-sort.c  decimal.c  false.c  flip.c  jojo.c  palindrome-1.c
oj-work-4/: CMakeLists.txt  formation.c  matrix-mult.c  mines.c  statistics.c  sudoku.c  trace.c
oj-work-5/: CMakeLists.txt  absolute-prime.c  behaviors.c  magic-square.c  next.c  pair.c  radix.c  sum.c  trail.c
oj-work-6/: CMakeLists.txt  integration.c  max.c  pascal.c  poi.c  tiles.c  triangle2.c
oj-work-7/: CMakeLists.txt  brackets.c  buddy.c  pour.c  rotate.c  rotate2.c  stack.c  whac-a-mole.c  wine.c
oj-work-8/: CMakeLists.txt  interpreter.c  substr.c  title.c
oj-work-9/: parse.c  strs_cat.c  strs_interleaf.c  tokenizer.c
