add_executable(single single.c)
add_executable(factorial factorial.c)
add_executable(series series.c)
add_executable(collatz collatz.c)
add_executable(standup standup.c)
add_executable(stand stand.c)
add_executable(mbx mbx.c)
add_executable(inversed inversed.c)
add_executable(fz fz.c)
add_executable(su su.c)
