add_executable(palindrome-1 palindrome-1.c)
target_link_libraries(palindrome-1 m)

add_executable(flip flip.c)
target_link_libraries(flip m)

add_executable(jojo jojo.c)
target_link_libraries(jojo m)

add_executable(bubble-sort bubble-sort.c)
target_link_libraries(bubble-sort m)

add_executable(b-ternary-1 b-ternary-1.c)
target_link_libraried(b-ternary-1 m)

add_executable(false false.c)
target_link_libraried(false m)

add_executable(b-final b-final.c)
target_link_libraried(b-final m)

add_executable(b-ternary-2 b-ternary-2.c)
target_link_libraried(b-ternary-2 m)

add_executable(decimal decimal.c)
target_link_libraried(decimal m)
