add_executable(tiles tiles.c)
target_link_libraries(tiles m)

add_executable(pascal pascal.c)
target_link_libraries(pascal m)

add_executable(max max.c)
target_link_libraries(max m)

add_executable(poi poi.c)
target_link_libraries(poi m)

add_executable(integration integration.c)
target_link_libraries(integration m)

add_executable(triangle2 triangle2.c)
target_link_libraries(triangle2 m)