add_executable(wine wine.c)
target_link_libraries(wine m)

add_executable(stack stack.c)
target_link_libraries(stack m)

add_executable(brackets brackets.c)
target_link_libraries(brackets m)

add_executable(rotate rotate.c)
target_link_libraries(rotate m)

add_executable(buddy buddy.c)
target_link_libraries(buddy m)

add_executable(rotate2 rotate2.c)
target_link_libraries(rotate2 m)

add_executable(whac-a-mole whac-a-mole.c)
target_link_libraries(whac-a-mole m)

add_executable(pour pour.c)
target_link_libraries(pour m)
